Updated Sample Game Webpage
Fixed Filters; Added Responsive Data to predRow to Better Evaluate Books

--- a/notebooks/Modeling.ipynb
+++ b/notebooks/Modeling.ipynb
@@ -25631,13 +25631,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ml_winnings</th>\n",
+       "      <th>spread_winnings</th>\n",
+       "      <th>total_winnings</th>\n",
+       "      <th>agg_winnings</th>\n",
+       "      <th>book</th>\n",
+       "      <th>game_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>35.6375</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>-14.3625</td>\n",
+       "      <td>BOVADA</td>\n",
+       "      <td>1386611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>35.2050</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>-14.7950</td>\n",
+       "      <td>GTBets</td>\n",
+       "      <td>1386611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35.2050</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>-14.7950</td>\n",
+       "      <td>MyBookie</td>\n",
+       "      <td>1386611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35.6375</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>-14.3625</td>\n",
+       "      <td>BetNow</td>\n",
+       "      <td>1386611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>35.4175</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>-14.5825</td>\n",
+       "      <td>SportsBetting</td>\n",
+       "      <td>1386611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50513</th>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>47.3225</td>\n",
+       "      <td>48.3650</td>\n",
+       "      <td>70.6875</td>\n",
+       "      <td>BetOnline</td>\n",
+       "      <td>1028163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50514</th>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>47.7275</td>\n",
+       "      <td>-2.2725</td>\n",
+       "      <td>Opening</td>\n",
+       "      <td>1028163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50515</th>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>48.3650</td>\n",
+       "      <td>-1.6350</td>\n",
+       "      <td>best</td>\n",
+       "      <td>1028163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50516</th>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>47.3225</td>\n",
+       "      <td>47.7275</td>\n",
+       "      <td>70.0500</td>\n",
+       "      <td>worst</td>\n",
+       "      <td>1028163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50517</th>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>47.5925</td>\n",
+       "      <td>47.9400</td>\n",
+       "      <td>70.5325</td>\n",
+       "      <td>average</td>\n",
+       "      <td>1028163</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>50518 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ml_winnings  spread_winnings  total_winnings  agg_winnings  \\\n",
+       "0          35.6375         -25.0000        -25.0000      -14.3625   \n",
+       "1          35.2050         -25.0000        -25.0000      -14.7950   \n",
+       "2          35.2050         -25.0000        -25.0000      -14.7950   \n",
+       "3          35.6375         -25.0000        -25.0000      -14.3625   \n",
+       "4          35.4175         -25.0000        -25.0000      -14.5825   \n",
+       "...            ...              ...             ...           ...   \n",
+       "50513     -25.0000          47.3225         48.3650       70.6875   \n",
+       "50514     -25.0000         -25.0000         47.7275       -2.2725   \n",
+       "50515     -25.0000         -25.0000         48.3650       -1.6350   \n",
+       "50516     -25.0000          47.3225         47.7275       70.0500   \n",
+       "50517     -25.0000          47.5925         47.9400       70.5325   \n",
+       "\n",
+       "                book  game_id  \n",
+       "0             BOVADA  1386611  \n",
+       "1             GTBets  1386611  \n",
+       "2           MyBookie  1386611  \n",
+       "3             BetNow  1386611  \n",
+       "4      SportsBetting  1386611  \n",
+       "...              ...      ...  \n",
+       "50513      BetOnline  1028163  \n",
+       "50514        Opening  1028163  \n",
+       "50515           best  1028163  \n",
+       "50516          worst  1028163  \n",
+       "50517        average  1028163  \n",
+       "\n",
+       "[50518 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 233,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "winnings_dash.loc[:, [\"ml_winnings\", \"spread_winnings\", \"total_winnings\", \"agg_winnings\", \"book\", \"game_id\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_picks.merge(ma_10_ex_mean.graded_picks, on=[\"game_id\", \"book\"]).assign(team_arr = lambda x: x.home_abbv + \",\" + x.away_abbv)\\\n",
-    "    .merge(ma_10_ex_mean.projections.loc[:, [\"game_id\", \"season\"]], on=\"game_id\").to_csv(\"../data/interim/website/dash/team_picks.csv\", index=False)"
+    "team_picks = team_picks.merge(ma_10_ex_mean.graded_picks, on=[\"game_id\", \"book\"]).assign(team_arr = lambda x: x.home_abbv + \",\" + x.away_abbv)\\\n",
+    "    .merge(ma_10_ex_mean.projections.loc[:, [\"game_id\", \"season\"]], on=\"game_id\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_picks = team_picks.merge(winnings_dash.loc[:, [\"ml_winnings\", \"spread_winnings\", \"total_winnings\", \"agg_winnings\", \"book\", \"game_id\"]], on=[\"book\", \"game_id\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_picks.to_csv(\"../data/interim/website/dash/team_picks.csv\", index=False, float_format=\"%.2f\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -25929,20 +26139,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 234,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>abbv</th>\n",
+       "      <th>efg_pct</th>\n",
+       "      <th>orb_pct</th>\n",
+       "      <th>tov_pct</th>\n",
+       "      <th>fta_per_fga_pct</th>\n",
+       "      <th>game_possessions</th>\n",
+       "      <th>pts</th>\n",
+       "      <th>game_code</th>\n",
+       "      <th>date</th>\n",
+       "      <th>season</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TOR</td>\n",
+       "      <td>0.544</td>\n",
+       "      <td>0.261</td>\n",
+       "      <td>0.107</td>\n",
+       "      <td>0.220</td>\n",
+       "      <td>100.721685</td>\n",
+       "      <td>116</td>\n",
+       "      <td>201810260TOR</td>\n",
+       "      <td>2018-10-26 19:30:00</td>\n",
+       "      <td>18-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DAL</td>\n",
+       "      <td>0.478</td>\n",
+       "      <td>0.208</td>\n",
+       "      <td>0.120</td>\n",
+       "      <td>0.261</td>\n",
+       "      <td>100.721685</td>\n",
+       "      <td>107</td>\n",
+       "      <td>201810260TOR</td>\n",
+       "      <td>2018-10-26 19:30:00</td>\n",
+       "      <td>18-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BOS</td>\n",
+       "      <td>0.475</td>\n",
+       "      <td>0.302</td>\n",
+       "      <td>0.119</td>\n",
+       "      <td>0.101</td>\n",
+       "      <td>97.780277</td>\n",
+       "      <td>101</td>\n",
+       "      <td>201810190TOR</td>\n",
+       "      <td>2018-10-19 20:00:00</td>\n",
+       "      <td>18-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>TOR</td>\n",
+       "      <td>0.538</td>\n",
+       "      <td>0.267</td>\n",
+       "      <td>0.107</td>\n",
+       "      <td>0.207</td>\n",
+       "      <td>97.780277</td>\n",
+       "      <td>113</td>\n",
+       "      <td>201810190TOR</td>\n",
+       "      <td>2018-10-19 20:00:00</td>\n",
+       "      <td>18-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TOR</td>\n",
+       "      <td>0.565</td>\n",
+       "      <td>0.186</td>\n",
+       "      <td>0.082</td>\n",
+       "      <td>0.217</td>\n",
+       "      <td>100.326146</td>\n",
+       "      <td>116</td>\n",
+       "      <td>201810170TOR</td>\n",
+       "      <td>2018-10-17 19:30:00</td>\n",
+       "      <td>18-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9871</th>\n",
+       "      <td>MEM</td>\n",
+       "      <td>0.483</td>\n",
+       "      <td>0.216</td>\n",
+       "      <td>0.082</td>\n",
+       "      <td>0.267</td>\n",
+       "      <td>97.404142</td>\n",
+       "      <td>100</td>\n",
+       "      <td>202105190MEM</td>\n",
+       "      <td>2021-05-19 19:30:00</td>\n",
+       "      <td>20-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9872</th>\n",
+       "      <td>MEM</td>\n",
+       "      <td>0.485</td>\n",
+       "      <td>0.302</td>\n",
+       "      <td>0.106</td>\n",
+       "      <td>0.265</td>\n",
+       "      <td>105.546262</td>\n",
+       "      <td>117</td>\n",
+       "      <td>202105210GSW</td>\n",
+       "      <td>2021-05-21 21:00:00</td>\n",
+       "      <td>20-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9873</th>\n",
+       "      <td>GSW</td>\n",
+       "      <td>0.511</td>\n",
+       "      <td>0.262</td>\n",
+       "      <td>0.170</td>\n",
+       "      <td>0.213</td>\n",
+       "      <td>105.546262</td>\n",
+       "      <td>112</td>\n",
+       "      <td>202105210GSW</td>\n",
+       "      <td>2021-05-21 21:00:00</td>\n",
+       "      <td>20-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9874</th>\n",
+       "      <td>POR</td>\n",
+       "      <td>0.542</td>\n",
+       "      <td>0.196</td>\n",
+       "      <td>0.113</td>\n",
+       "      <td>0.488</td>\n",
+       "      <td>104.100714</td>\n",
+       "      <td>126</td>\n",
+       "      <td>202008150POR</td>\n",
+       "      <td>2020-08-15 14:30:00</td>\n",
+       "      <td>19-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9875</th>\n",
+       "      <td>MEM</td>\n",
+       "      <td>0.565</td>\n",
+       "      <td>0.286</td>\n",
+       "      <td>0.150</td>\n",
+       "      <td>0.239</td>\n",
+       "      <td>104.100714</td>\n",
+       "      <td>122</td>\n",
+       "      <td>202008150POR</td>\n",
+       "      <td>2020-08-15 14:30:00</td>\n",
+       "      <td>19-20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9876 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     abbv  efg_pct  orb_pct  tov_pct  fta_per_fga_pct  game_possessions  pts  \\\n",
+       "0     TOR    0.544    0.261    0.107            0.220        100.721685  116   \n",
+       "1     DAL    0.478    0.208    0.120            0.261        100.721685  107   \n",
+       "2     BOS    0.475    0.302    0.119            0.101         97.780277  101   \n",
+       "3     TOR    0.538    0.267    0.107            0.207         97.780277  113   \n",
+       "4     TOR    0.565    0.186    0.082            0.217        100.326146  116   \n",
+       "...   ...      ...      ...      ...              ...               ...  ...   \n",
+       "9871  MEM    0.483    0.216    0.082            0.267         97.404142  100   \n",
+       "9872  MEM    0.485    0.302    0.106            0.265        105.546262  117   \n",
+       "9873  GSW    0.511    0.262    0.170            0.213        105.546262  112   \n",
+       "9874  POR    0.542    0.196    0.113            0.488        104.100714  126   \n",
+       "9875  MEM    0.565    0.286    0.150            0.239        104.100714  122   \n",
+       "\n",
+       "         game_code                date season  \n",
+       "0     201810260TOR 2018-10-26 19:30:00  18-19  \n",
+       "1     201810260TOR 2018-10-26 19:30:00  18-19  \n",
+       "2     201810190TOR 2018-10-19 20:00:00  18-19  \n",
+       "3     201810190TOR 2018-10-19 20:00:00  18-19  \n",
+       "4     201810170TOR 2018-10-17 19:30:00  18-19  \n",
+       "...            ...                 ...    ...  \n",
+       "9871  202105190MEM 2021-05-19 19:30:00  20-21  \n",
+       "9872  202105210GSW 2021-05-21 21:00:00  20-21  \n",
+       "9873  202105210GSW 2021-05-21 21:00:00  20-21  \n",
+       "9874  202008150POR 2020-08-15 14:30:00  19-20  \n",
+       "9875  202008150POR 2020-08-15 14:30:00  19-20  \n",
+       "\n",
+       "[9876 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "###"
+    "model_2_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2058,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_2_df.to_csv(\"../data/interim/variables.csv\", index=False)"
+    "model_2_df.to_csv(\"../data/interim/website/dash/variables.csv\", index=False)"
    ]
   },
   {
