Removed Sample Files and Added Anchors To Respective Games in Game Log

--- a/notebooks/Modeling.ipynb
+++ b/notebooks/Modeling.ipynb
@@ -25968,6 +25968,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1083,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_time_diff = ma_10_ex_mean.timeseries.groupby([\"book\", \"game_id\"]).diff()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1084,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_time_diff.timestamp = _time_diff.timestamp.apply(lambda x: x.seconds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1085,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_time_diff = _time_diff.fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 798,
    "metadata": {},
    "outputs": [],
@@ -25995,11 +26022,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 801,
+   "execution_count": 1088,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ma_10_ex_mean.timeseries.to_csv(\"../data/interim/website/game_log/timeseries_game.csv\", index=False)"
+    "ma_10_ex_mean.timeseries.merge(_time_diff, left_index=True, right_index=True, suffixes=(\"\", \"_diff\")).to_csv(\"../data/interim/website/game_log/timeseries_game.csv\", index=False)"
    ]
   },
   {
@@ -27729,312 +27756,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1061,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>home_abbv</th>\n",
-       "      <th>away_abbv</th>\n",
-       "      <th>book</th>\n",
-       "      <th>moneyline_home</th>\n",
-       "      <th>moneyline_away</th>\n",
-       "      <th>spread_home</th>\n",
-       "      <th>spread_odds_home</th>\n",
-       "      <th>spread_away</th>\n",
-       "      <th>spread_odds_away</th>\n",
-       "      <th>total</th>\n",
-       "      <th>over_odds</th>\n",
-       "      <th>under_odds</th>\n",
-       "      <th>game_id</th>\n",
-       "      <th>market_score_home</th>\n",
-       "      <th>market_score_away</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>CLE</td>\n",
-       "      <td>BOS</td>\n",
-       "      <td>average</td>\n",
-       "      <td>-198.59</td>\n",
-       "      <td>171.285714</td>\n",
-       "      <td>-4.642857</td>\n",
-       "      <td>-109.42</td>\n",
-       "      <td>4.642857</td>\n",
-       "      <td>-110.56</td>\n",
-       "      <td>216.071429</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>888630</td>\n",
-       "      <td>110.357143</td>\n",
-       "      <td>105.714286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CLE</td>\n",
-       "      <td>BOS</td>\n",
-       "      <td>worst</td>\n",
-       "      <td>-232.99</td>\n",
-       "      <td>160.000000</td>\n",
-       "      <td>-5.500000</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>4.500000</td>\n",
-       "      <td>-111.99</td>\n",
-       "      <td>216.000000</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>888630</td>\n",
-       "      <td>110.750000</td>\n",
-       "      <td>105.750000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CLE</td>\n",
-       "      <td>BOS</td>\n",
-       "      <td>best</td>\n",
-       "      <td>-185.01</td>\n",
-       "      <td>194.000000</td>\n",
-       "      <td>-4.500000</td>\n",
-       "      <td>-108.00</td>\n",
-       "      <td>5.500000</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>216.500000</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>888630</td>\n",
-       "      <td>110.500000</td>\n",
-       "      <td>105.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>GSW</td>\n",
-       "      <td>HOU</td>\n",
-       "      <td>average</td>\n",
-       "      <td>-463.02</td>\n",
-       "      <td>368.571429</td>\n",
-       "      <td>-9.428571</td>\n",
-       "      <td>-111.91</td>\n",
-       "      <td>9.428571</td>\n",
-       "      <td>-107.90</td>\n",
-       "      <td>231.428571</td>\n",
-       "      <td>-111.38</td>\n",
-       "      <td>-108.52</td>\n",
-       "      <td>888635</td>\n",
-       "      <td>120.428571</td>\n",
-       "      <td>111.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>GSW</td>\n",
-       "      <td>HOU</td>\n",
-       "      <td>worst</td>\n",
-       "      <td>-495.05</td>\n",
-       "      <td>325.000000</td>\n",
-       "      <td>-9.500000</td>\n",
-       "      <td>-117.00</td>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>230.500000</td>\n",
-       "      <td>-115.00</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>888635</td>\n",
-       "      <td>120.000000</td>\n",
-       "      <td>110.750000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50513</th>\n",
-       "      <td>POR</td>\n",
-       "      <td>MEM</td>\n",
-       "      <td>Intertops</td>\n",
-       "      <td>-260.00</td>\n",
-       "      <td>220.000000</td>\n",
-       "      <td>-6.000000</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>229.500000</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>1285591</td>\n",
-       "      <td>117.750000</td>\n",
-       "      <td>111.750000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50514</th>\n",
-       "      <td>POR</td>\n",
-       "      <td>MEM</td>\n",
-       "      <td>SportsBetting</td>\n",
-       "      <td>-255.00</td>\n",
-       "      <td>215.000000</td>\n",
-       "      <td>-6.000000</td>\n",
-       "      <td>-115.00</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>-105.00</td>\n",
-       "      <td>229.500000</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>1285591</td>\n",
-       "      <td>117.750000</td>\n",
-       "      <td>111.750000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50515</th>\n",
-       "      <td>POR</td>\n",
-       "      <td>MEM</td>\n",
-       "      <td>BetNow</td>\n",
-       "      <td>-260.00</td>\n",
-       "      <td>220.000000</td>\n",
-       "      <td>-6.000000</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>229.500000</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>1285591</td>\n",
-       "      <td>117.750000</td>\n",
-       "      <td>111.750000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50516</th>\n",
-       "      <td>POR</td>\n",
-       "      <td>MEM</td>\n",
-       "      <td>MyBookie</td>\n",
-       "      <td>-255.00</td>\n",
-       "      <td>215.000000</td>\n",
-       "      <td>-6.500000</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>6.500000</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>230.500000</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>-110.00</td>\n",
-       "      <td>1285591</td>\n",
-       "      <td>118.500000</td>\n",
-       "      <td>112.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50517</th>\n",
-       "      <td>POR</td>\n",
-       "      <td>MEM</td>\n",
-       "      <td>GTBets</td>\n",
-       "      <td>-260.00</td>\n",
-       "      <td>220.000000</td>\n",
-       "      <td>-6.000000</td>\n",
-       "      <td>-109.00</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>-109.00</td>\n",
-       "      <td>229.500000</td>\n",
-       "      <td>-109.00</td>\n",
-       "      <td>-109.00</td>\n",
-       "      <td>1285591</td>\n",
-       "      <td>117.750000</td>\n",
-       "      <td>111.750000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>50518 rows × 15 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      home_abbv away_abbv           book  moneyline_home  moneyline_away  \\\n",
-       "0           CLE       BOS        average         -198.59      171.285714   \n",
-       "1           CLE       BOS          worst         -232.99      160.000000   \n",
-       "2           CLE       BOS           best         -185.01      194.000000   \n",
-       "3           GSW       HOU        average         -463.02      368.571429   \n",
-       "4           GSW       HOU          worst         -495.05      325.000000   \n",
-       "...         ...       ...            ...             ...             ...   \n",
-       "50513       POR       MEM      Intertops         -260.00      220.000000   \n",
-       "50514       POR       MEM  SportsBetting         -255.00      215.000000   \n",
-       "50515       POR       MEM         BetNow         -260.00      220.000000   \n",
-       "50516       POR       MEM       MyBookie         -255.00      215.000000   \n",
-       "50517       POR       MEM         GTBets         -260.00      220.000000   \n",
-       "\n",
-       "       spread_home  spread_odds_home  spread_away  spread_odds_away  \\\n",
-       "0        -4.642857           -109.42     4.642857           -110.56   \n",
-       "1        -5.500000           -110.00     4.500000           -111.99   \n",
-       "2        -4.500000           -108.00     5.500000           -110.00   \n",
-       "3        -9.428571           -111.91     9.428571           -107.90   \n",
-       "4        -9.500000           -117.00     9.000000           -110.00   \n",
-       "...            ...               ...          ...               ...   \n",
-       "50513    -6.000000           -110.00     6.000000           -110.00   \n",
-       "50514    -6.000000           -115.00     6.000000           -105.00   \n",
-       "50515    -6.000000           -110.00     6.000000           -110.00   \n",
-       "50516    -6.500000           -110.00     6.500000           -110.00   \n",
-       "50517    -6.000000           -109.00     6.000000           -109.00   \n",
-       "\n",
-       "            total  over_odds  under_odds  game_id  market_score_home  \\\n",
-       "0      216.071429    -110.00     -110.00   888630         110.357143   \n",
-       "1      216.000000    -110.00     -110.00   888630         110.750000   \n",
-       "2      216.500000    -110.00     -110.00   888630         110.500000   \n",
-       "3      231.428571    -111.38     -108.52   888635         120.428571   \n",
-       "4      230.500000    -115.00     -110.00   888635         120.000000   \n",
-       "...           ...        ...         ...      ...                ...   \n",
-       "50513  229.500000    -110.00     -110.00  1285591         117.750000   \n",
-       "50514  229.500000    -110.00     -110.00  1285591         117.750000   \n",
-       "50515  229.500000    -110.00     -110.00  1285591         117.750000   \n",
-       "50516  230.500000    -110.00     -110.00  1285591         118.500000   \n",
-       "50517  229.500000    -109.00     -109.00  1285591         117.750000   \n",
-       "\n",
-       "       market_score_away  \n",
-       "0             105.714286  \n",
-       "1             105.750000  \n",
-       "2             105.500000  \n",
-       "3             111.000000  \n",
-       "4             110.750000  \n",
-       "...                  ...  \n",
-       "50513         111.750000  \n",
-       "50514         111.750000  \n",
-       "50515         111.750000  \n",
-       "50516         112.000000  \n",
-       "50517         111.750000  \n",
-       "\n",
-       "[50518 rows x 15 columns]"
-      ]
-     },
-     "execution_count": 1061,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
